# cpp-gp-valve

./: .gitignore  CMakeLists.txt  cpp_gp_valve.sln  cpp_gp_valve.vcxproj  cpp_gp_valve.vcxproj.filters  defines.h  main.cpp  math.h  physics.h  readme.txt  report_file.txt  settings.cpp  valve.cpp  valve.h
cmake/modules/: FindEigen3.cmake  FindNumPy.cmake
src/: console.cpp  console.h  handler.cpp  handler.h  main.cpp  math.h  matherials.h  physics.h  settings.cpp  settings.h  valve.cpp  valve.h
